Add new recipes onto index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/chicken-pad-thai.html">Chicken Pad Thai</a>
+    <a href="./recipes/mongolian-beef.html">Mongolian Beef</a>
+    <a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a>
 
 </body>
 </html>
