--- a/recipes/mongolian-beef.html
+++ b/recipes/mongolian-beef.html
@@ -10,11 +10,22 @@
     <img src="../images/mongolian-beef.jpg"
     width="600">
     <h2>Description</h2>
-    <p>Pargraph one describing what the dish and recipe is about</p>
-    <p>Paragraph two describing what the dish an recipe is about</p>
+    <p>Mongolian beef is a tasty, quick and nutritious dish that can be made in bulk for meal prepping!
+        It's my favorite go-to dish for something easy to make that will hit all your macro goals when protein is a priority.
+    </p>
+    <p>If you're looking for a staple you can eat every day of the week look no further.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>Ingredients</li>
+        <li>2 tablespoons vegetable oil</li>
+        <li>1/2 teapsoon ginger (minced)</li>
+        <li>4 cloves garlic (minced)</li>
+        <li>1/2 cup soy sauce</li>
+        <li>1/4 cup water</li>
+        <li>1/2 cup brown sugar</li>
+        <li>1 pound ground beef</li>
+        <li>1/3 cup cornstarch</li>
+        <li>2 green onions (sliced)</li>
+        <li>Sesame seeds (to garnish)</li>
     </ul>
     <h2>Steps</h2>
     <ol>
