Add steps to mongolian-beef

--- a/recipes/mongolian-beef.html
+++ b/recipes/mongolian-beef.html
@@ -29,7 +29,12 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Steps</li>
+        <li>Slice the flank steak into thin ¼" pieces. Toss with cornstarch, shaking off any excess and set aside.</li>
+        <li>In a 10-inch skillet, heat 2 teaspoons of oil over medium-low heat. Stir in minced ginger and garlic and cook until fragrant, about one minute.</li>
+        <li>Add soy sauce, water, and brown sugar to the skillet, then bring to a boil. Let it boil for 3-5 minutes until slightly thickened. Transfer to a small bowl and set aside.</li>
+        <li>Heat 1 tablespoon of oil in a separate pan or wok over medium-high heat. Cook the beef in small batches for about 2 minutes. It does not need to be cooked through.</li>
+        <li>Once all of the beef is browned, add the beef and sauce back to the skillet and heat over medium until hot and bubbly.</li>
+        <li>Remove from heat and stir in green onions. Serve over rice. Garnish with sesame seeds</li>
     </ol>
 </body>
 </html>
