Finish chicken-pad-thai.html

--- a/recipes/chicken-pad-thai.html
+++ b/recipes/chicken-pad-thai.html
@@ -11,15 +11,41 @@
     alt="Chicken Pad Thai"
     width="600">
     <h2>Description</h2>
-    <p>Pargraph one describing what the dish and recipe is about</p>
-    <p>Paragraph two describing what the dish an recipe is about</p>
+    <p> I always thought that I preferred lo-mein over other Asian noodle dishes, until the day I tried Pad Thai. Where had this heavenly dish been all of my life? When I met my girlfriend, I was overjoyed to find out she was a Pad Thai lover as well — a match made in heaven!
+    </p>
+    <p>I’ve made this dish with shrimp before which, is a pretty common way of serving it. Sometimes though, you just don’t have shrimp on hand so chicken comes to the rescue. Which is pretty much exactly what happened when I made this chicken pad Thai. The result? Big. Fat. Success. My girlfriend raved about it!
+    </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>Ingredients</li>
+        <li>8 ounces flat rice noodles</li>
+        <li>1 large boneless skinless chicken breast (flattened to 1/2 inch thickness)</li>
+        <li>Salt and pepper - to taste</li>
+        <li>2 eggs</li>
+        <li>1 cip fresh bean sprouts</li>
+        <li>1/3 cup sliced green onions</li>
+        <li>1/4 cup sliced white onions</li>
+        <li>1/3 cup cilantro</li>
+        <li>Peanuts</li>
+    </ul>
+    <h2>Sauce</h2>
+    <ul>
+        <li>1/4 cup ketchup</li>
+        <li>2 tablespoons fish sauce</li>
+        <li>2 tablespoons sugar</li>
+        <li>1 teaspoon minced garlic</li>
+        <li>1 teaspoon peanut butter</li>
+        <li>Juice of 1 lime</li>
+        <li>1/2 teaspoon crushed red pepper flakes</li>
+        <li>1 teaspoon soy sauce</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Steps</li>
+        <li>Season chicken with salt and pepper to taste.</li>
+        <li>Cook chicken in a large wok or pan over medium heat, stirring throughout until cooked through (about 6-8 minutes), transfer chicken to a bowl and set aside.</li>
+        <li>Whisk together all sauce ingredients and set aside.</li>
+        <li>Crack eggs over preheated pan (where you cooked the chicken) and allow to fry for a bout a minute ,then break it up with a spoon and add the white onions and bean sprouts.</li>
+        <li>Add chicken and sauce. Add noodles and toss to coat the noodles in the sauce.</li>
+        <li>Stir in green onions and cilantro. Garnish with peanuts if desired.</li>
     </ol>
 </body>
 </html>
