Add alt text to recipe images

--- a/recipes/mongolian-beef.html
+++ b/recipes/mongolian-beef.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Mongolian Beef</h1>
     <img src="../images/mongolian-beef.jpg"
-    width="600">
+    width="600"
+    alt="Mongolian Beef">
     <h2>Description</h2>
     <p>Mongolian beef is a tasty, quick and nutritious dish that can be made in bulk for meal prepping!
         It's my favorite go-to dish for something easy to make that will hit all your macro goals when protein is a priority.
