--- a/recipes/pepperoni-pizza.html
+++ b/recipes/pepperoni-pizza.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Pepperoni Pizza</h1>
     <img src="../images/pepperoni-pizza.jpg"
-    width="600">
+    width="600"
+    alt="Pepperoni Pizza">
     <h2>Description</h2>
     <p>Neapolitan pizza (the original and, many say, the best style of pizza in existence) has a thin base, puffy, chewy yet crisp crust (known in Italian as the cornicione) as well as simple, high-quality ingredients and toppings.</p>
     <p>No one really knows how the first Neapolitan pizza was made, let alone who made it. Most agree, however, that in the 1700s, flatbreads were already being used as bases for toppings. It wasn’t until the late 18th century that people in Naples started to top theirs with tomatoes (which originated in the New World). Today, people cherish Neapolitan pizza, and the art of making it, so much that UNESCO included it in its cultural heritage list. The Associazione Verace Pizza Napoletana (the Association for True Neapolitan Pizza) also closely protects the traditions and recipes for making this most classic of pizzas. </p>
