--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/chicken-pad-thai.html">Chicken Pad Thai</a>
-    <a href="./recipes/mongolian-beef.html">Mongolian Beef</a>
-    <a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a>
+    <ul>
+        <li><a href="./recipes/chicken-pad-thai.html">Chicken Pad Thai</a></li>
+        <li><a href="./recipes/mongolian-beef.html">Mongolian Beef</a></li>
+        <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
+    </ul>
 
 </body>
 </html>
