Add css to homepage

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/index-styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/chicken-pad-thai.html">Chicken Pad Thai</a></li>
-        <li><a href="./recipes/mongolian-beef.html">Mongolian Beef</a></li>
-        <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
-    </ul>
-
+    <h1 id="title">Odin Recipes</h1>
+    <img src="./images/header.png" width="800px">
+    <div style="margin-bottom: 20px;"></div>
+    <a href="./recipes/chicken-pad-thai.html"><button class="recipes">Chicken Pad Thai</button></a>
+    <a href="./recipes/mongolian-beef.html"><button class="recipes">Mongolian Beef</button></a>
+    <a href="./recipes/pepperoni-pizza.html"><button class="recipes">Pepperoni Pizza</button></a>
+    <br>
 </body>
 </html>
