Add css to pizza page

--- a/recipes/pepperoni-pizza.html
+++ b/recipes/pepperoni-pizza.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/pizza-styles.css">
 </head>
 <body>
-    <h1>Pepperoni Pizza</h1>
-    <img src="../images/pepperoni-pizza.jpg"
-    width="600"
-    alt="Pepperoni Pizza">
-    <h2>Description</h2>
+    <div id="intro">
+        <div id="title">PEPPERONI PIZZA</div>
+        <img src="../images/pepperoni-pizza.jpg"
+        width="600"
+        alt="Pepperoni Pizza">
+    </div>
+    
+    <div class="header">Description</div>
     <p>Neapolitan pizza (the original and, many say, the best style of pizza in existence) has a thin base, puffy, chewy yet crisp crust (known in Italian as the cornicione) as well as simple, high-quality ingredients and toppings.</p>
     <p>No one really knows how the first Neapolitan pizza was made, let alone who made it. Most agree, however, that in the 1700s, flatbreads were already being used as bases for toppings. It wasn’t until the late 18th century that people in Naples started to top theirs with tomatoes (which originated in the New World). Today, people cherish Neapolitan pizza, and the art of making it, so much that UNESCO included it in its cultural heritage list. The Associazione Verace Pizza Napoletana (the Association for True Neapolitan Pizza) also closely protects the traditions and recipes for making this most classic of pizzas. </p>
     <p>AVPN uses a stringent set of rules to guarantee a true Neapolitan pizza. They include:</p>
@@ -23,49 +27,70 @@
     </ul>
     <p>Enough talk, let's get started on our pizza!</p>
 
-    <h2>Ingredients</h2>
-    <h4>For the dough:</h4>
-    <ul>
-        <li>3 cups lukewarm water</li>
-        <li>1 1/4 teaspoon active dry yeast (or 1 teaspoon instant dry yeast)</li>
-        <li>8 1/2 cups "00" flour</li>
-        <li>3 teaspoons sea salt</li>
-        <li>Flour for dusting</li>
-    </ul>
-    <h4>For the tomato sauce:</h4>
-    <ul>
-        <li>3 cups crushed tomatoes</li>
-        <li>3 teaspoons kosher salt</li>
-    </ul>
-    <h4>For the toppings:</h4>
-    <ul>
-        <li>7 1/2 cups fresh mozzarella</li>
-        <li>20 grams fresh basil</li>
-        <li>2 1/4 tablespoons extra-virgin olive oil</li>
-        <li>4 cups pepperoni</li>
-    </ul>
+    <div class="main">
+        <div class="header">Ingredients</div>
 
-    <h2>Steps</h2>
-    <h4>For the dough:</h4>
-    <ol>
-        <li>Fill a bowl with lukewarm water and add the yeast. Use a whisk or fork to thoroughly mix until blended. In a separate bowl, combine the flour and salt, then add it to the water and yeast mixture.</li>
-        <li>Stir with a wooden spoon until a dough starts to form. Continue mixing by hand until the dough comes together in a ball. Dump the dough onto a lightly floured surface and knead with both hands for about 10 minutes — until it’s firm and stretchy. Return it to the bowl and cover with a dish towel and let rise in a warm place for about 2 hours, or until doubled in size.</li>
-        <li>Place the dough on a lightly floured work surface and use a dough scraper to divide it into six 9-ounce (250-gram) balls — we recommend using a digital scale for accuracy.</li>
-        <li>Shape each piece of dough into a ball. </li>
-        <li>Place the dough balls in a sealable dough box, or on a baking sheet covered with a dish towel. Place at room temperature for 6 hours, or in the refrigerator overnight. Pull from the refrigerator 4 hours before you want to use the dough.</li>
-        <li>Preheat your Ooni Volt to 850 °F (450 °C). When it has reached the desired temperature, turn your heat distribution dial to 100% towards the roof of your oven. </li>
-        <li>Place a dough ball on your lightly floured work surface then use your fingers to push the air from the center out to the edges. Stretch the dough out into a 12-inch (30 centimeter) base and leave it on the countertop or lay it over your lightly floured pizza peel. </li>
-    </ol>
-    <h4>For the tomato sauce:</h4>
-    <ol>
-        <li>Mix crushed tomatoes and salt together in a bowl. Set aside.</li>
-    </ol>
-    <h4>For the pizzas:</h4>
-    <ol>
-        <li>Top each pizza with ½ cup (80 grams) of tomatoes, 1 ¼ cup (100 grams) mozzarella, 4 to 5 basil leaves, and 5 grams extra virgin olive oil.</li>
-        <li>Open your oven, then slide the pizza off of the peel and into the Ooni Volt.</li>
-        <li>Cook the pizza for 1 to 2 minutes, or until the crust is golden brown and the cheese is melted and bubbly, turning every 20 seconds or so to ensure an even bake.</li>
-        <li>Remove the pizza from the oven, then slice, serve and enjoy. Repeat with the remaining 5 dough balls.</li>
-    </ol>
+        <div class="subheader">Four the dough:</div>
+        <div class="list">
+            <ul>
+                <li>3 cups lukewarm water</li>
+                <li>1 1/4 teaspoon active dry yeast (or 1 teaspoon instant dry yeast)</li>
+                <li>8 1/2 cups "00" flour</li>
+                <li>3 teaspoons sea salt</li>
+                <li>Flour for dusting</li>
+            </ul>
+        </div>
+
+        <div class="subheader">For the tomato sauce:</div>
+        <div class="list">
+            <ul>
+                <li>3 cups crushed tomatoes</li>
+                <li>3 teaspoons kosher salt</li>
+            </ul>
+        </div>
+
+        <div class="subheader">For the toppings:</div>
+        <div class="list">
+            <ul>
+                <li>7 1/2 cups fresh mozzarella</li>
+                <li>20 grams fresh basil</li>
+                <li>2 1/4 tablespoons extra-virgin olive oil</li>
+                <li>4 cups pepperoni</li>
+            </ul>
+        </div>
+
+        <div class="header">Steps</div>
+
+        <div class="subheader">For the dough:</div>
+        <div class="list">
+            <ol>
+                <li>Fill a bowl with lukewarm water and add the yeast. Use a whisk or fork to thoroughly mix until blended. In a separate bowl, combine the flour and salt, then add it to the water and yeast mixture.</li>
+                <li>Stir with a wooden spoon until a dough starts to form. Continue mixing by hand until the dough comes together in a ball. Dump the dough onto a lightly floured surface and knead with both hands for about 10 minutes — until it’s firm and stretchy. Return it to the bowl and cover with a dish towel and let rise in a warm place for about 2 hours, or until doubled in size.</li>
+                <li>Place the dough on a lightly floured work surface and use a dough scraper to divide it into six 9-ounce (250-gram) balls — we recommend using a digital scale for accuracy.</li>
+                <li>Shape each piece of dough into a ball. </li>
+                <li>Place the dough balls in a sealable dough box, or on a baking sheet covered with a dish towel. Place at room temperature for 6 hours, or in the refrigerator overnight. Pull from the refrigerator 4 hours before you want to use the dough.</li>
+                <li>Preheat your Ooni Volt to 850 °F (450 °C). When it has reached the desired temperature, turn your heat distribution dial to 100% towards the roof of your oven. </li>
+                <li>Place a dough ball on your lightly floured work surface then use your fingers to push the air from the center out to the edges. Stretch the dough out into a 12-inch (30 centimeter) base and leave it on the countertop or lay it over your lightly floured pizza peel. </li>
+            </ol>
+        </div>
+
+        <div class="subheader">For the tomato sauce:</div>
+        <div class="list">
+            <ol>
+                <li>Mix crushed tomatoes and salt together in a bowl. Set aside.</li>
+            </ol>
+        </div>
+
+        <div class="subheader">For the pizzas:</div>
+        <div class="list">
+            <ol>
+                <li>Top each pizza with ½ cup (80 grams) of tomatoes, 1 ¼ cup (100 grams) mozzarella, 4 to 5 basil leaves, and 5 grams extra virgin olive oil.</li>
+                <li>Open your oven, then slide the pizza off of the peel and into the Ooni Volt.</li>
+                <li>Cook the pizza for 1 to 2 minutes, or until the crust is golden brown and the cheese is melted and bubbly, turning every 20 seconds or so to ensure an even bake.</li>
+                <li>Remove the pizza from the oven, then slice, serve and enjoy. Repeat with the remaining 5 dough balls.</li>
+            </ol>
+        </div>
+    </div>
+
 </body>
 </html>
