Add box styling css to homepage

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1 id="title">Odin Recipes</h1>
     <img src="./images/header.png" width="800px">
-    <div style="margin-bottom: 20px;"></div>
-    <a href="./recipes/chicken-pad-thai.html"><button class="recipes">Chicken Pad Thai</button></a>
-    <a href="./recipes/mongolian-beef.html"><button class="recipes">Mongolian Beef</button></a>
-    <a href="./recipes/pepperoni-pizza.html"><button class="recipes">Pepperoni Pizza</button></a>
+    <div class="recipes">
+        <a href="./recipes/chicken-pad-thai.html"><button>Chicken Pad Thai</button></a>
+        <a href="./recipes/mongolian-beef.html"><button>Mongolian Beef</button></a>
+        <a href="./recipes/pepperoni-pizza.html"><button>Pepperoni Pizza</button></a>
+    </div>
     <br>
 </body>
 </html>
